Changed and redesigned a few texts on some of the web pages and styled the submission button on contact.html.

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
             <a href="index.html" class="navbar-brand navBrandColor">Charity Base</a>
 
             <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
-  
+
             <span class="navbar-toggler-icon"></span></button>
 
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -85,13 +85,14 @@
                         <textarea name="Message" id="contactMessage" class="form-control text-box-length" rows="5" required></textarea>
                     </div>
                 </div>
-
+            </form>
+            <div class="container">
                 <div class="row">
                     <div class="formsSubmit center-form">
                         <input type="submit" value="Submit" id="submitBtn" />
                     </div>
-                </div>
-            </form>
+               </div>
+            </div>
         </div>
 
     </article>
