--- a/map.html
+++ b/map.html
@@ -19,7 +19,7 @@
             <a href="index.html" class="navbar-brand navBrandColor">Charity Base</a>
 
             <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
-  
+
             <span class="navbar-toggler-icon"></span></button>
 
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -46,9 +46,13 @@
 
     <article>
         <!--Main Header and Description of the Web Page-->
-        <div class="text-center">
-            <h1>Landmap</h1>
-            <h2>Use the map below, in order to have a general overview of what countries require help and find quick information about them by clicking on the markers.</h2>
+        <div class="container">
+            <div class="row">
+                <div class="mapInstruction text-center">
+                    <h1>Landmap</h1>
+                    <h2>Use the map below, in order to have a general overview of what countries require help and find quick information about them by clicking on the markers.</h2>
+                </div>
+            </div>
         </div>
         <!--World Map-->
         <div id="map"></div>
