--- a/statistics.html
+++ b/statistics.html
@@ -20,7 +20,7 @@
             <a href="index.html" class="navbar-brand navBrandColor">Charity Base</a>
 
             <button class="navbar-toggler ml-auto" data-toggle="collapse" data-target="#navbarNavDropdown" aria-expanded="navbarNavDropdown" aria-controls="false">
-  
+
             <span class="navbar-toggler-icon"></span></button>
 
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -70,7 +70,7 @@
                     <h2 class="graph-color">Lowest GDP Per Capita In The World (Projected)</h2>
                     <div class="d-none d-sm-block" id="gdp-per-capita-chart"></div>
                     <div class="d-block d-sm-none no-content-BG">
-                        <p>This content is only available on devices with larger sizes.</p>
+                        <p>This content is only available on devices with larger screen sizes.</p>
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
                     <h2 class="graph-color">Gini Coefficient Chart</h2>
                     <div class="d-none d-sm-block" id="gini-coefficient-chart"></div>
                     <div class="d-block d-sm-none no-content-BG">
-                        <p>This content is only available on devices with larger sizes.</p>
+                        <p>This content is only available on devices with larger screen sizes.</p>
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                     <h2 class="graph-color">Unemployment Rate Pie Chart</h2>
                     <div class="d-none d-sm-block" id="unemployment-rate-pie-chart"></div>
                     <div class="d-block d-sm-none no-content-BG">
-                        <p>This content is only available on devices with larger sizes.</p>
+                        <p>This content is only available on devices with larger screen sizes.</p>
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                     <h2 class="graph-color">Female Unemployment Rate</h2>
                     <div class="d-none d-sm-block" id="unemployment-rate-female"></div>
                     <div class="d-block d-sm-none no-content-BG">
-                        <p>This content is only available on devices with larger sizes.</p>
+                        <p>This content is only available on devices with larger screen sizes.</p>
                     </div>
                 </div>
             </div>
@@ -172,7 +172,7 @@
                     <h2 class="graph-color">Male Unemployment Rate</h2>
                     <div class="d-none d-sm-block" id="unemployment-rate-male"></div>
                     <div class="d-block d-sm-none no-content-BG">
-                        <p>This content is only available on devices with larger sizes.</p>
+                        <p>This content is only available on devices with larger screen sizes.</p>
                     </div>
                 </div>
             </div>
@@ -195,7 +195,7 @@
                     <h2 class="graph-color">Unemployment Rates Pie Chart</h2>
                     <div class="d-none d-sm-block" id="gender-unemployment-rate-pie-chart"></div>
                     <div class="d-block d-sm-none no-content-BG">
-                        <p>This content is only available on devices with larger sizes.</p>
+                        <p>This content is only available on devices with larger screen sizes.</p>
                     </div>
                 </div>
             </div>
@@ -220,7 +220,7 @@
                     <h2 class="graph-color">Costs of Food in Various Countries or City.</h2>
                     <div class="d-none d-sm-block" id="costs-of-meals-chart"></div>
                     <div class="d-block d-sm-none no-content-BG">
-                        <p>This content is only available on devices with larger sizes.</p>
+                        <p>This content is only available on devices with larger screen sizes.</p>
                     </div>
                 </div>
             </div>
