Redesigned buttons on the homepage and the submission button in contact.html.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <h1 class="underline">Help People In Need</h1>
                             <p class="text">Around 795 million people in the world do not have enough food, in order to live a healthy and active life. However, you can help solving this problem by donating to save lives and help to change a part of this world!
                                 <br />
-                                <a href="donate.html" value="donateButtonHP" class="btn btn-primary donateButtonStyleHP">Donate here</a>
+                                <a href="donate.html" value="donateButtonHP" class="btn donateButtonStyleHP">Donate here</a>
                             </p>
 
 
@@ -115,7 +115,7 @@
                                 kinds of support! For statistics, please click <a href="statistics.html">here!</a>
 
                             </span>
-                                <button id="readBtn1" class="readBtn btn-info">Read More</button></p>
+                                <button id="readBtn1" class="readBtn">Read More</button></p>
 
 
 
@@ -144,7 +144,7 @@
                                 The GDP per capital and GDP growth play huge roles in a country's economic status, as they show measurements of a country's standard of living, how prosperous the citizens of a country feel, and how fast a country's economy is growing.
                                 <span id="dots2" class="dots">...</span><span id="more2" class="more">These are very low
                             in many countries as there are multiple problems, such as the status of their labour, lands, capital and enterprises. For statistics, please click <a href="statistics.html">here!</a></span>
-                                <button id="readBtn2" class="readBtn btn-info">Read More</button>
+                                <button id="readBtn2" class="readBtn">Read More</button>
                             </p>
 
 
