Redesigned the texts and buttons on the homepage.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="row">
                     <div class="col-11">
                         <div class="textHP1 text-center" id="textEffect">
-                            <h1 class="underline">Help People In Need</h1>
+                            <h1 class="underline header">Help People In Need</h1>
                             <p class="text">Around 795 million people in the world do not have enough food, in order to live a healthy and active life. However, you can help solving this problem by donating to save lives and help to change a part of this world!
                                 <br />
                                 <a href="donate.html" value="donateButtonHP" class="btn donateButtonStyleHP">Donate here</a>
@@ -97,7 +97,6 @@
 
                         </section>
                     </div>
-                    <div id="box"></div>
                 </div>
             </div>
         </div>
@@ -147,7 +146,6 @@
                                 <button id="readBtn2" class="readBtn">Read More</button>
                             </p>
 
-
                             <blockquote class="MotherTeresaQuote text-center">
                                 "It is not how much we give, but how much love we put into giving." <br />- Mother Teresa
                             </blockquote>
@@ -175,7 +173,7 @@
                 <div class="row">
                     <div class="col-3">
                         <div class="textHP2" id="textEffect5">
-                            <h2>Please Donate!</h2>
+                            <h2 class="header">Please Donate!</h2>
                             <a href="donate.html" value="donateButtonHP" class="btn btn-primary donateButtonStyleHP">Donate here</a>
                         </div>
                     </div>
