Repositioned sections of texts on the homepage.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class="hpimg-4">
             <!-- BG-IMG: https://pxhere.com/en/photo/1053497 -->
-            <div class="container-fluid section2-text" id="section2-text">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-12 text-center">
                         <section class="section3" id="textEffect2">
@@ -104,7 +104,7 @@
         <!--Section 3: The Struggle for Food and Health Care-->
 
         <div class="hpimg-2">
-            <div class="container-fluid section3-text" id="section3-text">
+            <div class="container-fluid">
                 <div class="row" id="textEffect3">
                     <div class="col-sm-12 text-center">
                         <section class="section">
@@ -132,7 +132,7 @@
         <!--Section 4: Lowest Economic Outputs-->
 
         <div class="hpimg-3">
-            <div class="container-fluid section4-text" id="section4-text">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-12 mx-auto text-center">
                         <section class="section2" id="textEffect4">
