--- a/donate.html
+++ b/donate.html
@@ -92,7 +92,7 @@
 
         <section>
             <div class="container">
-                <h1 class="charitiesH1 text-center underline">Charities</h1>
+                <h1 class="charitiesH1 text-center">Charities</h1>
                 <p class="donatePageTextColor text-center">You will be directed to the pages of the charity organisations. One to three charity organisations are presented for each of the countries below. Also, I do not provide donation services.</p>
             </div>
         </section>
