--- a/map.html
+++ b/map.html
@@ -48,7 +48,7 @@
         <!--Main Header and Description of the Web Page-->
         <div class="container">
             <div class="row">
-                <div class="mapInstruction text-center">
+                <div class="mapInstruction text-center"">
                     <h1>Landmap</h1>
                     <h2>Use the map below, in order to have a general overview of what countries require help and find quick information about them by clicking on the markers.</h2>
                 </div>
