Repositioned the submission button on the 'Contact' page.

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
             <h2>Please contact me by filling in the form below!</h2>
         </div>
 
-        <div class="container-fluid">
+        <div class="container-fluid contactForm">
             <form onsubmit="return sendMail(this);">
                 <div class="row">
                     <div class="forms center-form">
