Repositioned some of the background pictures on the homepage.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="col-sm-12 text-center">
                         <section class="section3" id="textEffect2">
                             <h2 class="header">The Poverty Trap</h2>
-                            <p class="text2 ">When a country does not have a enough capital, i.e. machinary, tools and buildings, people strive to produce goods and services. Therefore, they economic development and growth decreases and it becomes difficult to gain the
+                            <p class="text2 ">When a country does not have a enough capital, i.e. machinary, tools and buildings, people strive to produce goods and services. Therefore, their economic development and growth decreases and it becomes difficult to gain the
                                 capital that they require. As a result, they get trapped into a poverty cycle. However, you could change lives today by donating! Find more information, <a href="statistics.html">here!</a>
 
                                 <!--
