--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- BG-IMG: https://www.maxpixel.net/Disease-Africa-Sick-Poverty-Young-Face-Sadness-1783794-->
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-11">
+                    <div class="col-11 col-md-6">
                         <div class="top-section textHP1 text-center" id="textEffect">
                             <h1 class="underline header">Help People In Need</h1>
                             <p class="text">Around 795 million people in the world do not have enough food, in order to live a healthy and active life. However, you can help solving this problem by donating to save lives and help to change a part of this world!
