Added some text below the main heading on donate.html to describe the purpose of the web page better.

--- a/donate.html
+++ b/donate.html
@@ -93,7 +93,7 @@
         <section>
             <div class="container">
                 <h1 class="charitiesH1 text-center">Charities</h1>
-                <p class="donatePageTextColor text-center">You will be directed to the pages of the charity organisations. One to three charity organisations are presented for each of the countries below. Also, I do not provide donation services.</p>
+                <p class="donatePageTextColor text-center">You will be directed to the pages of the charity organisations. One to three of popular charity organisations are presented for each of the country that is below. Also, I do not provide donation services.</p>
             </div>
         </section>
 
