Added a timer of how long a user has been on the homepage and a counter of how many people are estimated to have passed away since then.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                 <div class="row">
                     <div class="col-11 col-md-6">
                         <div class="top-section textHP1 text-center" id="textEffect">
+                            <div id="death"></div>
+                            <div id="counter"></div>
                             <h1 class="underline header">Help People In Need</h1>
                             <p class="text">Around 795 million people in the world do not have enough food, in order to live a healthy and active life. However, you can help solving this problem by donating to save lives and help to change a part of this world!
                                 <br />
