Styled the counters and texts on the homepage.

--- a/index.html
+++ b/index.html
@@ -57,20 +57,34 @@
 
         <div class="hpimg-1">
             <!-- BG-IMG: https://www.maxpixel.net/Disease-Africa-Sick-Poverty-Young-Face-Sadness-1783794-->
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-11 col-md-6">
-                        <div class="top-section textHP1 text-center" id="textEffect">
-                            <div id="death"></div>
-                            <div id="counter"></div>
-                            <h1 class="underline header">Help People In Need</h1>
-                            <p class="text">Around 795 million people in the world do not have enough food, in order to live a healthy and active life. However, you can help solving this problem by donating to save lives and help to change a part of this world!
-                                <br />
-                                <a href="donate.html" value="donateButtonHP" class="btn donateButtonStyleHP">Donate here</a>
-                            </p>
+            <div id="textEffect">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-11 col-md-6">
+                            <div class="top-section textHP1 text-center">
+                                <h1 class="underline header">Help People In Need</h1>
+                                <p class="text">Around 795 million people in the world do not have enough food, in order to live a healthy and active life. However, you can help solving this problem by donating to save lives and help to change a part of this world!
+                                    <br />
+                                    <a href="donate.html" value="donateButtonHP" class="btn donateButtonStyleHP">Donate here</a>
+                                </p>
 
 
-                            <!--https://www.foodaidfoundation.org/world-hunger-statistics.html-->
+                                <!--https://www.foodaidfoundation.org/world-hunger-statistics.html-->
+                            </div>
+                        </div>
+                        <div class="col-md-6 d-none d-md-block d-lg-none">
+                            <div class="top-section-counter-BG text-center textHP1">
+                                <div id="counter"></div>
+                                <div id="death"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-11 col-md-6 d-md-none d-lg-block">
+                            <div class="top-section-counter-BG text-center textHP1">
+                                <div id="counter"></div>
+                                <div id="death"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
