--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                     <div class="row">
                         <div class="col-11 col-md-6 d-md-none d-lg-block">
                             <div class="top-section-counter-BG text-center textHP1">
-                                <div id="counter"></div>
-                                <div id="death"></div>
+                                <div id="counter2"></div>
+                                <div id="death2"></div>
                             </div>
                         </div>
                     </div>
