Redesigned the sections of the counters on the homepage and the 'Contact' page.

--- a/donate.html
+++ b/donate.html
@@ -92,7 +92,7 @@
 
         <section>
             <div class="container">
-                <h1 class="charitiesH1 text-center">Charities</h1>
+                <h1 class="charitiesH1 text-center header">Charities</h1>
                 <p class="donatePageTextColor text-center">You will be directed to the pages of the charity organisations. One to three of popular charity organisations are presented for each of the country that is below. Also, I do not provide donation services.</p>
             </div>
         </section>
