--- a/map.html
+++ b/map.html
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="row">
                 <div class="mapInstruction text-center"">
-                    <h1>Landmap</h1>
+                    <h1 class="header">Landmap</h1>
                     <h2>Use the map below, in order to have a general overview of what countries require help and find quick information about them by clicking on the markers.</h2>
                 </div>
             </div>
