--- a/statistics.html
+++ b/statistics.html
@@ -57,7 +57,27 @@
             <div class="row">
                 <div class="col-12">
                     <div class="statisticsHeading">
-                        <h1>Statistics</h1>
+                        <h1 class="header">Statistics</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div id="statsBox">
+                        <div class="theCounters">
+                            <div class="col-6">
+                                <div id="counterStats"></div>
+                            </div>
+                            <div class="col-6">
+                                <div id="deathStats"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="death-seconds">
+                        <p>It is estimated that two children die every second!</p>
                     </div>
                 </div>
             </div>
