Fixed the Javascript codes for the first two counters on the homepage.

--- a/donate.html
+++ b/donate.html
@@ -94,6 +94,7 @@
             <div class="container">
                 <h1 class="charitiesH1 text-center header">Charities</h1>
                 <p class="donatePageTextColor text-center">You will be directed to the pages of the charity organisations. One to three of popular charity organisations are presented for each of the country that is below. Also, I do not provide donation services.</p>
+                <p class="donatePageTextColor text-center">A calculator can be used to calculate how much you would like to donate by clicking on the calculator icon in the sidebar on the left-hand side of the web page.</p>
             </div>
         </section>
 
