Improved the design of the website by changing things, such as colors, paddings and more.

--- a/contact.html
+++ b/contact.html
@@ -79,21 +79,17 @@
                         <form onsubmit="return sendMail(this);">
                             <div class="row">
                                 <div class="forms center-form">
-                                    <label for="name">Name:</label>
-                                    <input type="text" name="name" id="name" class="form-control text-box-length" maxlength="20" required />
+                                    <input type="text" name="name" id="name" class="form-control text-box-length" placeholder="Name" maxlength="20" required />
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="forms center-form">
-                                    <label for="email">Email Address:</label>
-                                    <input type="text" name="email" id="email" class="form-control text-box-length" cols="100" rows=" 5" required />
+                                    <input type="text" name="email" id="email" class="form-control text-box-length" placeholder="Email Address" cols="100" rows=" 5" required />
                                 </div>
                             </div>
                             <div class="row">
-
                                 <div class="forms center-form">
-                                    <label for="contactMessage">Please Enter A Message Below:</label>
-                                    <textarea name="Message" id="contactMessage" class="form-control text-box-length" rows="5" required></textarea>
+                                    <textarea name="Message" id="contactMessage" class="form-control text-box-length" placeholder="Please Enter A Message" rows="5" required></textarea>
                                 </div>
                             </div>
                         </form>
