Worked on the README.md file.

--- a/statistics.html
+++ b/statistics.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -324,20 +326,3 @@
 </body>
 
 </html>
-<!--IMPORTANT SOURCES
-Gini Coefficient:
-https://data.worldbank.org/indicator/SI.POV.GINI?view=map
-https://www.focus-economics.com/blog/the-poorest-countries-in-the-world
-https://www.theguardian.com/inequality/datablog/2017/apr/26/inequality-index-where-are-the-worlds-most-unequal-countries
--->
-<!-- IMPORTANT SOURCES
-https://insight.wfp.org/where-do-you-think-you-would-find-the-most-expensive-plate-of-food-in-the-world-408ed2856108
-https://www.foodaidfoundation.org/world-hunger-statistics.html
-https://beta.grafiti.io/facts/557233-extreme-poverty-asia-2018
-
-statistics:
-https://beta.grafiti.io/facts/557233-extreme-poverty-asia-2018
-https://tradingeconomics.com/country-list/unemployment-rate
-
-
--->
