Mentioned more sources that I mentioned on the website in the README.md file and corrected a mistake in the donate.html file, so that a button would link to the website of the right charity organisation.

--- a/donate.html
+++ b/donate.html
@@ -676,7 +676,7 @@
                                         <p>
                                             This organisation is located in London and supports multiple causes, but their main focus is to help orphans, young adults and underprivilaged children in Ukraine. To find more information and to donate, please click the button below!
                                         </p>
-                                        <a href="https://www.outreachmoldova.org/" value="UkraineCharity" target="_blank" class="btn donateButtonStyle">Donate here</a>
+                                        <a href="https://www.ukrainecharity.org/" value="UkraineCharity" target="_blank" class="btn donateButtonStyle">Donate here</a>
                                     </div>
                                     <div class="charity-1-img"></div>
                                 </div>
