Cleaned up the SCSS and HTML codes and added better hover effects for buttons on the homepage.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <h1 class="underline header">Help People In Need</h1>
                                 <p class="text">Around 795 million people in the world do not have enough food, in order to live a healthy and active life. However, you can help solving this problem by donating to save lives and help to change a part of this world!
                                     <br />
-                                    <a href="donate.html" value="donateButtonHP" class="btn donateButtonStyleHP">Donate here</a>
+                                    <a href="donate.html" class="btn donateButtonStyleHP">Donate here</a>
                                 </p>
                             </div>
                         </div>
