--- a/statistics.html
+++ b/statistics.html
@@ -85,6 +85,15 @@
             </div>
         </div>
 
+        <!--Short Notice about the Interactive Charts-->
+        <div class="container">
+            <div class="row">
+                <div class="col-12 row-flex">
+                    <p class="notice-text">Click on the bars in the first graph to compare the dispalyed data with the data in the charts below.</p>
+                </div>
+            </div>
+        </div>
+
         <!--GDP Per Capita Chart-->
         <div class="container-fluid chartStyling">
             <div class="row">
