Added information in the README.md file and improved the code for the aside part on the homepage.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 ran away, suffer mentally and physically from wars, got affected by natural disasters, etc. <span id="dots1" class="dots">...</span><span id="more1" class="more">So, they do not have much access to nutritions, medications or shelter and require various
                                 kinds of support! For statistics, please click <a href="statistics.html">here!</a>
                             </span>
-                                <button id="readBtn1" class="readBtn">Read More</button></p>
+                            <button id="readBtn1" class="readBtn">Read More</button></p>
                         </section>
                     </div>
                 </div>
@@ -167,11 +167,13 @@
 
 
     <aside>
-        <div class="social-media-button d-none d-sm-block">
-            <li class="facebook-aside"><a href="http://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a></li>
-            <li class="twitter-aside"><a href="http://www.twitter.com" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a></li>
-            <li class="youtube-aside"><a href="http://www.youtube.com" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a></li>
-            <li class="instagram-aside"><a href="http://www.instagram.com" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
+        <div>
+            <ul class="social-media-button d-none d-sm-block">
+                <li class="facebook-aside"><a href="http://www.facebook.com" target="_blank" class="facebook"><i class="fab fa-facebook"></i></a></li>
+                <li class="twitter-aside"><a href="http://www.twitter.com" target="_blank" class="twitter"><i class="fab fa-twitter"></i></a></li>
+                <li class="youtube-aside"><a href="http://www.youtube.com" target="_blank" class="youtube"><i class="fab fa-youtube"></i></a></li>
+                <li class="instagram-aside"><a href="http://www.instagram.com" target="_blank" class="instagram"><i class="fab fa-instagram"></i></a></li>
+            </ul>
         </div>
     </aside>
 
